Fixed alignment in reset view

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8368,7 +8368,7 @@ body {
 .brand-logo {
   font-family: 'Pacifico', cursive;
   font-size: 25px;
-  color: black;
+  color: black !important;
   letter-spacing: 1px;
 }
 
