--- a/resources/assets/sass/_common.scss
+++ b/resources/assets/sass/_common.scss
@@ -15,7 +15,7 @@ body {
 .brand-logo {
   font-family: 'Pacifico', cursive;
   font-size: 25px;
-  color: black;
+  color: black !important;
   letter-spacing:1px;
 }
 
